fix spacing and size issues due to bootstrap update on bread and bagel detail pages

--- a/_sass/_components/_map.scss
+++ b/_sass/_components/_map.scss
@@ -1,3 +1,6 @@
 .locations__map {
-  height: 100vh;
+  height: 30rem;
+  width: auto;
+  display: block;
+  margin: auto;
 }
