--- a/_sass/_layout/_bagel-detail.scss
+++ b/_sass/_layout/_bagel-detail.scss
@@ -1,17 +1,17 @@
 .details__hero {
 
   @include desktop {
-    font-size: 10rem;
+    font-size: 2rem;
     margin-top: 0;
   }
 
   @include tablet {
-    font-size: 10rem;
+    font-size: 2rem;
     margin-top: 0;
   }
 
   & .fa-arrow-left, & .fa-arrow-right {
-    font-size: 4rem;
+    font-size: 2.5rem;
     vertical-align: middle;
   }
 }
@@ -19,23 +19,23 @@
 .details__hero-title {
   color: $black;
   text-align: center;
-  padding-top: 10rem;
-  font-size: 5rem;
+  padding-top: 8rem;
+  font-size: 3rem;
 
   @include desktop {
-    font-size: 7.5rem;
-    padding-top: 3rem;
+    font-size: 5rem;
+    padding-top: 1.5rem;
   }
 
   @include tablet {
-    font-size: 7.5rem;
-    padding-top: 3rem;
+    font-size: 5rem;
+    padding-top: 1.5rem;
   }
 }
 
 .details__hero-image {
-  display: block;
-  margin: auto;
+  width: 100%;
+  height: auto;
 }
 
 .bagel__locations {
@@ -50,11 +50,11 @@
   margin-bottom: 1rem;
 
   @include desktop {
-    margin-top: -5rem;
+    margin-top: 0rem;
   }
 
   @include tablet {
-    margin-top: -5rem;
+    margin-top: 0rem;
   }
 }
 
@@ -63,16 +63,16 @@
   text-align: center;
 }
 
-.bagel-details__label-image {
-  display: block;
-  margin: auto;
-  max-height: 50rem;
+.bagel-details__label-img {
+  width: 100%;
+  height: auto;
 }
 
 .bagel-details__nutrition-image {
-  display: block;
-  margin: auto;
-  max-height: 50rem;
+  width: 100%;
+  max-height: 30rem;
+  min-height: 15rem;
+  max-width: 15rem;
   margin-top: 1rem;
 
   @include tablet {
@@ -86,23 +86,16 @@
 
 .details__bagel-ingredients {
   margin-top: 2rem;
-  font-size: 1.75rem;
+  font-size: 1rem;
 }
 
-.modal-dialog {
-  display: block;
-  margin: auto;
-}
-
-.modal-map {
-  display: block;
-  margin: auto;
-  min-height: 60rem;;
+.modal-body {
+  max-height: 40rem;
 }
 
 .bagels-details__detail-wrapper {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 
   @include tablet {
     margin-left: 0rem;
